--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,9 +11,13 @@
   <body>
     <div class="container">
       <%= render "common/navbar"%>
+      <%= render "common/flashes"%>
       <%= yield %>
     </div>
 
   </body>
-       <%= render "common/footer" %>
+  <footer>
+      <%= render "common/footer" %>  
+  </footer>
+
 </html>
