--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,15 +9,13 @@
   </head>
 
   <body>
-    <div class="container">
+    <div class="container-fluid">
       <%= render "common/navbar"%>
       <%= render "common/flashes"%>
       <%= yield %>
     </div>
-
+      <%= render "common/footer" %>
   </body>
-  <footer>
-      <%= render "common/footer" %>  
-  </footer>
+
 
 </html>
