--- a/app/views/admin/jobs/index.html.erb
+++ b/app/views/admin/jobs/index.html.erb
@@ -1,7 +1,7 @@
 <div class="pull-right">
   <%= link_to("Add a job",new_admin_job_path,class: :"btn btn-primary" )%>
 </div>
-<table class="table table-boldered">
+<table class="table table-boldered table-striped custab">
   <thead>
     <tr>
       <td>职缺</td>
@@ -18,16 +18,17 @@
       <%= render_job_status(job) %>
        <%= link_to(job.title,admin_job_path(job)) %>
     </td>
-    <td> <%= link_to(job.resumes.count, admin_job_resumes_path(job)) %> </td> 
+    <td> <%= link_to(job.resumes.count, admin_job_resumes_path(job)) %> </td>
      <td> <%= job.wage_lower_bound %> </td>
      <td> <%= job.wage_upper_bound %> </td>
     <td>
-      <%= link_to("Edit",edit_admin_job_path(job)) %>
-      <%= link_to("Destroy",admin_job_path(job),method: :delete,data: {:confirm => "Are you sure?"}) %>
-     <% if job.is_hidden %>
-    <%= link_to("Publish",publish_admin_job_path(job), method: :post,:class => "btn btn-xs btn-default") %>
-  <% else %>
-    <%= link_to("Hide", hide_admin_job_path(job), method: :post,:class => "btn btn-xs btn-default") %>
+
+      <%= link_to edit_admin_job_path(job), class: "btn btn-xs btn-info" do %><i class="fa fa-pencil"></i><% end %>
+      <%= link_to admin_job_path(job), :method => :delete, :class => "btn btn-xs  btn-danger", :data => { :confirm => "Are you sure?" } do %><i class="fa fa-trash-o"></i><% end %>
+   <% if job.is_hidden %>
+        <%= link_to publish_admin_job_path(job) , :method => :post, :class => "btn btn-xs btn-success" do %><i class="fa fa-eye"></i><% end %>
+   <% else %>
+      <%= link_to hide_admin_job_path(job), :method => :post,  :class => "btn btn-xs btn-warning" do %><i class="fa fa-eye-slash"></i><% end %>
   <% end %>
     </td>
     <td>
