--- a/app/views/common/_footer.html.erb
+++ b/app/views/common/_footer.html.erb
@@ -1,6 +1,7 @@
-
-<footer class="container" style="margin-top:100px;">
-  <p class="text-center">Copyright ©2016 Rails101
-    <br>Design by Lotus
-  </p>
+<footer class="text-center">
+   <div class="footer-below">
+       <p class="text-center">Copyright ©2016  W&W Offer
+          <br>Design by Lotus
+       </p>
+   </div>
 </footer>
