--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -1,27 +1,76 @@
-<nav class="navbar navbar-default" role="navigation">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a href="/" class="navbar-brand">Job Listing</a>
-    </div>
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav navbar-right">
-        <% if !current_user %>
-        <li><%= link_to("注册",new_user_registration_path)%></li>
-        <li><%= link_to("登录",new_user_session_path)%></li>
-        <% else %>
-         <li class="dropdown">
-           <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-             Hi,<%= current_user.email %>
-             <b class="caret"></b>
-           </a>
-           <ul class="dropdown-menu">
-             <li> <%= link_to("Admin Panel", admin_jobs_path) %> </li>
+<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <div class="container-fluid">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse"  data-target="#bs-example-navbar-collapse-1">
+         <span class="sr-only">Toggle navigation</span>
+         <span class="icon-bar"></span>
+         <span class="icon-bar"></span>
+         <span class="icon-bar"></span>
+          </button>
+          <a href="/" class="navbar-brand"><i class="fa fa-wordpress" aria-hidden="true"></i>W&W Offer</a>
+        </div>
 
-             <li><%= link_to("退出",destroy_user_session_path,method: :delete) %></li>
-           </ul>
-         </li>
-        <% end %>
-      </ul>
-    </div>
+
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav">
+            <li>
+              <%= render :partial => "jobs/search_bar" %>
+            </li>
+          </ul>
+          <ul class="nav navbar-nav navbar-right">
+            <% if !current_user %>
+              <li><a href="#" data-toggle="modal" data-target="#signup-modal"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+              <li><a href="#" data-toggle="modal" data-target="#login-modal"><span class="glyphicon glyphicon-log-in"></span> Log In</a></li>
+            <% else %>
+               <li class="dropdown">
+                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                   Hi,<%= current_user.email %>
+                   <b class="caret"></b>
+                 </a>
+                 <ul class="dropdown-menu">
+                   <li> <%= link_to('<span class="glyphicon glyphicon-home"></span> Admin Panel', admin_jobs_path) %> </li>
+
+                   <li><%= link_to("<span class='glyphicon glyphicon-log-out'></span> 退出",destroy_user_session_path,method: :delete) %></li>
+                 </ul>
+               </li>
+            <% end %>
+          </ul>
+        </div>
   </div>
 </nav>
+<div class="modal fade" id="login-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" style="display: none;">
+  <div class="modal-dialog" role="document">
+    <div class="loginmodal-container">
+       <h2>Log in</h2>
+       <%= simple_form_for(resource, as: resource_name, url: session_path(resource_name)) do |f| %>
+         <div class="form-inputs">
+           <%= f.input :email, required: false, autofocus: true %>
+           <%= f.input :password, required: false %>
+           <%= f.input :remember_me, as: :boolean if devise_mapping.rememberable? %>
+         </div>
+         <div class="form-actions">
+           <%= f.button :submit, "Log in" %>
+         </div>
+       <% end %>
+    </div>
+  </div>
+</div>
+
+<div class="modal fade" id="signup-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" style="display: none;">
+  <div class="modal-dialog">
+    <div class="loginmodal-container">
+      <h2>Sign up</h2>
+        <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+        <%= f.error_notification %>
+        <div class="form-inputs">
+          <%= f.input :email, required: true, autofocus: true %>
+          <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length) %>
+          <%= f.input :password_confirmation, required: true %>
+        </div>
+        <div class="form-actions">
+            <%= f.button :submit, "Sign up" %>
+        </div>
+      <% end %>
+    </div>
+  </div>
+</div>
