--- a/app/views/jobs/_search_bar.html.erb
+++ b/app/views/jobs/_search_bar.html.erb
@@ -1,15 +1,15 @@
-
-<div class="form-group form-inline search-bar">
-  <div class="row">
-    <form class="jobs-search-form" >
+<div class="row">
+  <div class="col-sm-9 col-lg-8 col-lg-offset-2">
+    <%= form_tag search_jobs_path , :method => :get, :class => "jobs-search-form" do %>
       <div class="input-group">
-        <input type="text" class="form-control search-bar-input"  placeholder="Job title, company, city...">
+        <input type="text" class="form-control search-bar-input" name="q" value="<%= params[:q] %>" placeholder="Job title, company, city...">
+
         <span class="input-group-btn">
           <button type="submit" class="btn btn-default search-bar-submit">
             <span class="glyphicon glyphicon-search"></span>
           </button>
         </span>
       </div>
-    </form>
+    <% end %>
   </div>
 </div>
